--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Página</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <header>
     <nav>
       <ul class="banner">
-        <li><a href="#">Home</a></li>
+        <li class="logo-container"><a href="#inicio"><img src="image/1.png" alt="Logo" class="logo"></a></li>
+        <li><a href="#inicio">Inicio</a></li>
         <li><a href="#documento">Documento</a></li>
         <li><a href="#promociones">Promociones</a></li>
+        <li class="social-icons">
+          <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.whatsapp.com" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        </li>
       </ul>
     </nav>
   </header>
