--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <ul class="banner">
-        <li class="logo-container"><a href="#inicio"><img src="image/3.jpg" alt="Logo" class="logo"></a></li>
+        <li class="logo-container"><a href="#inicio"><img src="image/2.png" alt="Logo" class="logo"></a></li>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#documento">Documento</a></li>
         <li><a href="#promociones">Promociones</a></li>
