--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <ul class="banner">
         <li class="logo-container"><a href="#inicio"><img src="image/1.png" alt="Logo" class="logo"></a></li>
-        <li><a href="#inicio">Home</a></li>
+        <li><a href="#inicio">Inicio</a></li>
         <li><a href="#documento">Documento</a></li>
         <li><a href="#promociones">Promociones</a></li>
         <li class="social-icons">
